--- a/content/10-conclusion.tex
+++ b/content/10-conclusion.tex
@@ -7,7 +7,7 @@
 Ce mémoire a exploré l’application du \textit{Tiny Machine Learning} (TinyML) à la prédiction du temps de cuisson des haricots à partir d’images. Plusieurs contributions scientifiques et techniques peuvent être soulignées :
 
 \begin{enumerate}
-    \item \textbf{Constitution d’un jeu de données original.} Un corpus inédit a été établi, comprenant des images annotées de 56 variétés de haricots, associées à des temps de cuisson mesurés de manière expérimentale. Cette base constitue un apport méthodologique utile pour la recherche en agroalimentaire et en vision par ordinateur.
+    \item \textbf{Constitution d’un jeu de données original.} Un corpus inédit a été établi, comprenant des images annotées de 8 variétés (56 sous\(-\)variétés au total) de haricots, associées à des temps de cuisson mesurés de manière expérimentale. Cette base constitue un apport méthodologique utile pour la recherche en agroalimentaire et en vision par ordinateur.
     
     \item \textbf{Prétraitement et normalisation.} Un protocole rigoureux a été défini pour préparer les données : redimensionnement homogène des images, augmentation artificielle pour compenser les déséquilibres inter-variétés, et normalisation afin de stabiliser l’entraînement.
     
