--- a/content/abreviation.tex
+++ b/content/abreviation.tex
@@ -7,21 +7,32 @@
 \hline
 CNN & Convolutional Neural Network (réseau de neurones convolutifs) \\
 \hline
-TBNet & \textit{Tiny Bean (cooking time) Network}, architecture proposée pour la prédiction du temps de cuisson des haricots à partir d’images. 
-Le suffixe \textbf{2} (TBNet2) correspond à une couche finale de 256 filtres, tandis que le suffixe \textbf{5} (TBNet5) correspond à 512 filtres. \\
-\hline
+FPU & Floating Point Unit (une unité du CPU qui effectue des calculs sur des nombres à virgule flottante) \\
 MAE & Mean Absolute Error (erreur absolue moyenne), mesure de l’écart moyen entre les valeurs prédites et observées. \\
 \hline
-RMSE & Root Mean Square Error (racine de l’erreur quadratique moyenne), mesure de l’écart quadratique entre prédictions et observations. \\
+
+MAPE & Mean Absolute Percentage Error (erreur absolue moyenne en pourcentage) \\
 \hline
+
+MaxErr & Maximum Error (erreur maximale observée) \\
+\hline
+
+NASNetMobile & Neural Architecture Search Network Mobile \\
+\hline
+
 $R^2$ & Coefficient de détermination, mesure de la proportion de variance expliquée par le modèle. \\
 \hline
-MAPE & Mean Absolute Percentage Error (erreur absolue moyenne en pourcentage). \\
+
+RMSE & Root Mean Square Error (racine de l’erreur quadratique moyenne), mesure de l’écart quadratique entre prédictions et observations \\
 \hline
-MaxErr & Maximum Error (erreur maximale observée). \\
+
+TBNet & \textit{Tiny Bean (cooking time) Network}, architecture proposée pour la prédiction du temps de cuisson des haricots à partir d’images. 
+Le suffixe \textbf{2} (TBNet2) correspond à une couche finale de 256 filtres, tandis que le suffixe \textbf{5} (TBNet5) correspond à 512 filtres \\
 \hline
-TinyML & Tiny Machine Learning, déploiement de modèles d’apprentissage automatique sur des dispositifs embarqués à faibles ressources. \\
+
+TinyML & Tiny Machine Learning, déploiement de modèles d’apprentissage automatique sur des dispositifs embarqués à faibles ressources \\
 \hline
+
 XAI & Explainable Artificial Intelligence (intelligence artificielle explicable), ensemble de méthodes visant à interpréter les décisions des modèles. \\
 \hline
 \end{longtable}
