--- a/library.bib
+++ b/library.bib
@@ -1,3 +1,12 @@
+@misc{UN_WPP_2022,
+  author       = {{United Nations}, Department of Economic and Social Affairs, Population Division},
+  title        = {World Population Prospects 2022: Summary of Results},
+  year         = {2022},
+  howpublished = {\url{https://population.un.org/wpp/}},
+  note         = {Consulté le 16 septembre 2025}
+}
+
+
 @article{sladojevic2016deep,
   title={Deep Neural Networks Based Recognition of Plant Diseases by Leaf Image Classification},
   author={Sladojevic, Srdjan and Arsenovic, Marko and Anderla, Andras and Culibrk, Dubravko and Stefanovic, Darko},
